fix(sidebar): Auto scrollbars

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,7 +38,7 @@
 }
 
 .ant-layout-sider-children {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .center {
